# car_description

./: .pre-commit-config.yaml  Dockerfile  README.md
car_description/: CMakeLists.txt  README.md  package.xml
car_description/config/: static_camera_config.yaml  static_gnss_config.yaml  static_imu_config.yaml  static_lidar_config.yaml  static_radar_config.yaml
car_description/launch/: car_description.launch.xml
car_description/urdf/: cameras.xacro  gps.xacro  imu.xacro  lidar.xacro  oxts.xacro  radar.xacro
car_description/urdf/mondeo_dca/: mondeo_dca.xacro  mondeo_dca_params.xacro  mondeo_dca_sensors.xacro  mondeo_dca_structure.xacro
car_description/urdf/velodyne/: HDL-32E.urdf.xacro
car_meshes/: CMakeLists.txt  package.xml
