<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>car_description</name>
    <version>1.0.0</version>
    <description>The car_description package</description>
    <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>xacro</depend>
    <depend>robot_state_publisher</depend>
    <depend>joint_state_publisher</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
