<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>car_meshes</name>
    <version>1.0.0</version>
    <description>The car_meshes package. Most models are custom, body_collision.stl was taken from dbw_mkz_description.</description>
    <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>car_description</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
